{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 51,
  "lineage": "8a539cba-a350-1e5c-37ea-5d308a0685ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "team-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f03ef7cf03833f48",
            "association_id": "eipassoc-0c355b91aba38fda7",
            "domain": "vpc",
            "id": "eipalloc-0f03ef7cf03833f48",
            "network_border_group": "us-west-2",
            "network_interface": "eni-00a31ed100b381809",
            "private_dns": "ip-10-0-9-0.us-west-2.compute.internal",
            "private_ip": "10.0.9.0",
            "public_dns": "ec2-52-36-216-173.us-west-2.compute.amazonaws.com",
            "public_ip": "52.36.216.173",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "team-eip"
            },
            "tags_all": {
              "Name": "team-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892d3c7ee96c0bf7",
            "arn": "arn:aws:ec2:us-west-2:883195043912:instance/i-021561fdd23de0529",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021561fdd23de0529",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "team",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-087638febdfe07990",
            "private_dns": "ip-10-0-10-58.us-west-2.compute.internal",
            "private_ip": "10.0.10.58",
            "public_ip": "34.214.169.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09c90a02ad2919c88",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a78f28c0444a4ef",
            "tags": {
              "Name": "JumpBox"
            },
            "tags_all": {
              "Name": "JumpBox"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f8389d98459212c1"
            ]
          },
          "dependencies": [
            "aws_subnet.public-subnet-1",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "team-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:internet-gateway/igw-00044320eca03b443",
            "id": "igw-00044320eca03b443",
            "owner_id": "883195043912",
            "tags": {
              "Name": "team-igw"
            },
            "tags_all": {
              "Name": "team-igw"
            },
            "vpc_id": "vpc-010419b75cf415914"
          },
          "dependencies": [
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "team-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f03ef7cf03833f48",
            "connectivity_type": "public",
            "id": "nat-0b1bf26751e989ebd",
            "network_interface_id": "eni-00a31ed100b381809",
            "private_ip": "10.0.9.0",
            "public_ip": "52.36.216.173",
            "subnet_id": "subnet-04a78f28c0444a4ef",
            "tags": {
              "Name": "team-NAT"
            },
            "tags_all": {
              "Name": "team-NAT"
            }
          },
          "dependencies": [
            "aws_eip.team-eip",
            "aws_subnet.public-subnet-1",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "team-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:route-table/rtb-0e506de8696a91128",
            "id": "rtb-0e506de8696a91128",
            "owner_id": "883195043912",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00044320eca03b443",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "team-rt"
            },
            "tags_all": {
              "Name": "team-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-010419b75cf415914"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.team-igw",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "team-rt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:route-table/rtb-0a36800c4468458b4",
            "id": "rtb-0a36800c4468458b4",
            "owner_id": "883195043912",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b1bf26751e989ebd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "team-rt-2"
            },
            "tags_all": {
              "Name": "team-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-010419b75cf415914"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.team-eip",
            "aws_nat_gateway.team-nat",
            "aws_subnet.public-subnet-1",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team-associate-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098e2e9739161b0fb",
            "route_table_id": "rtb-0e506de8696a91128",
            "subnet_id": "subnet-04a78f28c0444a4ef"
          },
          "dependencies": [
            "aws_internet_gateway.team-igw",
            "aws_route_table.team-rt",
            "aws_subnet.public-subnet-1",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team-associate-rt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9fc6c45525ff127",
            "route_table_id": "rtb-0e506de8696a91128",
            "subnet_id": "subnet-0818b4a1dac76f298"
          },
          "dependencies": [
            "aws_internet_gateway.team-igw",
            "aws_route_table.team-rt",
            "aws_subnet.public-subnet-2",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team-associate-rt-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e4377d43132e4f7",
            "route_table_id": "rtb-0e506de8696a91128",
            "subnet_id": "subnet-0c6c3f32e6ce4aff8"
          },
          "dependencies": [
            "aws_internet_gateway.team-igw",
            "aws_route_table.team-rt",
            "aws_subnet.public-subnet-3",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team-associate-rt-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0defacb64cb158d67",
            "route_table_id": "rtb-0a36800c4468458b4",
            "subnet_id": "subnet-0c2387713955c9991"
          },
          "dependencies": [
            "aws_eip.team-eip",
            "aws_nat_gateway.team-nat",
            "aws_route_table.team-rt-2",
            "aws_subnet.private-subnet-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team-associate-rt-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df983547fad03173",
            "route_table_id": "rtb-0a36800c4468458b4",
            "subnet_id": "subnet-0663d059f4fd2840c"
          },
          "dependencies": [
            "aws_eip.team-eip",
            "aws_nat_gateway.team-nat",
            "aws_route_table.team-rt-2",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:subnet/subnet-0c2387713955c9991",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2387713955c9991",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883195043912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team-Privatesubnet-1"
            },
            "tags_all": {
              "Name": "team-Privatesubnet-1"
            },
            "vpc_id": "vpc-010419b75cf415914"
          },
          "dependencies": [
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:subnet/subnet-0663d059f4fd2840c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0663d059f4fd2840c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883195043912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team-Privatesubnet-2"
            },
            "tags_all": {
              "Name": "team-Privatesubnet-2"
            },
            "vpc_id": "vpc-010419b75cf415914"
          },
          "dependencies": [
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:subnet/subnet-04a78f28c0444a4ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a78f28c0444a4ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "883195043912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team-publicsubnet-1"
            },
            "tags_all": {
              "Name": "team-publicsubnet-1"
            },
            "vpc_id": "vpc-010419b75cf415914"
          },
          "dependencies": [
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:subnet/subnet-0818b4a1dac76f298",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0818b4a1dac76f298",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "883195043912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team-publicsubnet-2"
            },
            "tags_all": {
              "Name": "team-publicsubnet-2"
            },
            "vpc_id": "vpc-010419b75cf415914"
          },
          "dependencies": [
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:subnet/subnet-0c6c3f32e6ce4aff8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6c3f32e6ce4aff8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "883195043912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team-publicsubnet-3"
            },
            "tags_all": {
              "Name": "team-publicsubnet-3"
            },
            "vpc_id": "vpc-010419b75cf415914"
          },
          "dependencies": [
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "team-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:883195043912:vpc/vpc-010419b75cf415914",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ddd3a0921bf07fb3",
            "default_route_table_id": "rtb-073d4478592a6ad7d",
            "default_security_group_id": "sg-0f8389d98459212c1",
            "dhcp_options_id": "dopt-e591909d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-010419b75cf415914",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-073d4478592a6ad7d",
            "owner_id": "883195043912",
            "tags": {
              "Name": "team-vpc"
            },
            "tags_all": {
              "Name": "team-vpc"
            }
          }
        }
      ]
    }
  ]
}